cluster/apps/networking/traefik/traefik-dashboard/traefik-dash-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_DOMAIN}`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: middleware-chain-cf-auth
          namespace: networking
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
